[tool.poetry]
name = "ferm-docker"
version = "0.1.0"
description = ""
authors = ["Martin Weinelt"]

[tool.poetry.scripts]
ferm_docker = "ferm_docker:main"

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11.2"
docker = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
