[tool.poetry]
name = "ferm-docker"
version = "0.1.0"
description = "Automatically generate ferm firewall configurations for a local docker instance"
authors = ["Martin Weinelt"]
license = "GPL-2.0-only"

[tool.poetry.scripts]
ferm-docker = "ferm_docker:main"

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11.2"
docker = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
