[tool.poetry]
name = "ferm-docker"
version = "0.1.4"
description = "Automatically generate ferm firewall configuration for a local Docker instance"
authors = ["Martin Weinelt"]
license = "GPL-2.0-only"
readme = "README.rst"
homepage = "https://github.com/mweinelt/ferm-docker"
repository = "https://github.com/mweinelt/ferm-docker"
keywords = ["docker", "ferm"]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
ferm-docker = "ferm_docker:main"

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11.2"
docker = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
